# Programmierung1

./: .gitignore  CMakeLists.txt
src/: helloWorld.c
src/abgaben/02/: aufgabe1.md  count.c  graph.c  loop.c  perm.c  prim1.c  wuerfel.c
src/abgaben/03/: fib-iter.c  matrix-mul.c  median.c  pointers.c
src/abgaben/04/: binom_it.c  palindrom.c  sieb.c
src/abgaben/05/: easy-sort.c  hanoi.c  substring.c
src/abgaben/06/: ttt.c
src/uebungen/01/: fizzBuzz.c  pyramid.c  task1.c
