cmake_minimum_required(VERSION 3.23)
project(Programmierung1 C)

set(CMAKE_C_COMPILER "../tools/Strawberry Perl/c/bin/gcc.exe")
set(CMAKE_C_FLAGS "-Wall -Wextra -Werror -pedantic -std=c99")

add_executable(helloWorld src/helloWorld.c)
add_executable(task1 src/uebungen/01/task1.c)
add_executable(fizzBuzz src/uebungen/01/fizzBuzz.c)
add_executable(pyramid src/uebungen/01/pyramid.c)
add_executable(count src/abgaben/02/count.c)
add_executable(loop src/abgaben/02/loop.c)
add_executable(perm src/abgaben/02/perm.c)
add_executable(wuerfel src/abgaben/02/wuerfel.c)
add_executable(prim1 src/abgaben/02/prim1.c)
add_executable(graph src/abgaben/02/graph.c)

add_executable(fib-iter src/abgaben/03/fib-iter.c)
add_executable(median src/abgaben/03/median.c)
add_executable(matrix-mul src/abgaben/03/matrix-mul.c)
add_executable(pointers src/abgaben/03/pointers.c)
add_executable(palindrom src/abgaben/04/palindrom.c)
add_executable(sieb src/abgaben/04/sieb.c)
add_executable(binom_it src/abgaben/04/binom_it.c)
add_executable(substring src/abgaben/05/substring.c)
add_executable(hanoi src/abgaben/05/hanoi.c)
add_executable(easy-sort src/abgaben/05/easy-sort.c)